--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-MONGO_URI=mongodb+srv://rithikdhakshnamoorthy:Rit90!@-20@cluster0.mongodb.net/"largeproject.maudxd.online"?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://rithikdhakshnamoorthy:Rit90!@-20@cluster0.mongodb.net/largeproject.maudxd.online?retryWrites=true&w=majority
+PORT=5000
+
