--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "bootswatch": "^5.3.5",
     "express-fileupload": "^1.5.1",
     "path": "^0.12.7",
     "react": "^19.0.0",
